[tool.poetry]
name = "litebird_sim"
version = "0.14.0"
description = "Simulation tools for the LiteBIRD experiment"
authors = [
    "Tomasi Maurizio <maurizio.tomasi@unimi.it>",
    "Pagano Luca <luca.pagano@unife.it>",
    "Anand Avinash",
    "Baccigalupi Carlo",
    "Banday Anthony",
    "Bortolami Marco",
    "Galloni Giacomo",
    "Galloway Mathew",
    "Ghigna Tommaso",
    "Giardiello Serena",
    "Gomes Miguel",
    "Hivon Eric",
    "Krachmalnicoff Nicoletta",
    "Micheli Silvia",
    "Monelli Marta",
    "Nagano Yuya",
    "Novelli Alessandro",
    "Patanchon Guillaume",
    "Poletti Davide",
    "Puglisi Giuseppe",
    "Raffuzzi, Nicolo Elia",
    "Reinecke Martin",
    "Takase Yusuke",
    "Weymann-Despres Gilles",
]
readme = "README.md"
license = "GPL3"
include = [
    "images/logo.png",
    "static/report_template.html",
    "static/sakura.css",
    "default_imo/schema.json.gz",
    "templates/*.md",
    "templates/*.txt",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numba = "^0.61.2"
numpy = "^1.26.4"
astropy = "6.1.7"
tomlkit = "^0.12.1"

mpi4py = {version = "^4.0.3", optional = true}
brahmap = {git="https://github.com/anand-avinash/BrahMap.git", optional = true}

sphinx = "^8.1.3"
sphinxcontrib-bibtex = "^2.6.3"
sphinxcontrib-contentui = "^0.2.5"
"sphinxcontrib.asciinema" = "^0.3.7"

jupyter = {version = "^1.1.1", optional = true}
jupyterlab = {version = ">=4.4.2", optional = true}
pytest = "^8.3.5"
jinja2 = "^3.1"
markdown = "^3.8"
markdown-katex = {version = "^202406.1035"}
matplotlib = "^3.10.3"
healpy = "^1.18.1"
pyyaml = "^6.0"
jplephem = "^2.22"
PyGithub = "^2.6.1"
requests = "^2.32.0"
rich = "^14.0.0"
ducc0 = "^0.38.0"
pysm3 = {git  = "https://github.com/galsci/pysm.git", rev = "f220a4e"}
asciimatics = "^1.15.0"
pyperclip = "^1.9.0"
pre-commit = "^4.2.0"
h5py = "^3.9"
deprecation = "^2.1.0"
scipy = "^1.14.0"
ruff = "^0.11.11"
libinsdb = "^0.8.0"
pydata-sphinx-theme = "^0.16.1"
poetry-plugin-export = "^1.9.0"

[tool.poetry.extras]
brahmap = ["brahmap"]
mpi = ["mpi4py"]
jupyter = ["jupyter"]

[tool.ruff]
lint.extend-select = []

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]

[build-system]
requires = ["poetry_core>=2.1"]
build-backend = "poetry.core.masonry.api"
