[tool.poetry]
name = "litebird_sim"
version = "0.15.3"
description = "Simulation tools for the LiteBIRD experiment"
authors = [
    "Tomasi Maurizio <maurizio.tomasi@unimi.it>",
    "Pagano Luca <luca.pagano@unife.it>",
    "Anand Avinash",
    "Baccigalupi Carlo",
    "Banday Anthony",
    "Bortolami Marco",
    "Galloni Giacomo",
    "Galloway Mathew",
    "Ghigna Tommaso",
    "Giardiello Serena",
    "Gomes Miguel",
    "Hivon Eric",
    "Krachmalnicoff Nicoletta",
    "Micheli Silvia",
    "Monelli Marta",
    "Nagano Yuya",
    "Novelli Alessandro",
    "Patanchon Guillaume",
    "Poletti Davide",
    "Puglisi Giuseppe",
    "Raffuzzi, Nicolo Elia",
    "Reinecke Martin",
    "Takase Yusuke",
    "Weymann-Despres Gilles",
]
readme = "README.md"
license = "GPL3"
include = [
    "images/logo.png",
    "litebird_sim/static/report_template.html",
    "litebird_sim/static/sakura.css",
    "litebird_sim/default_imo/schema.json.gz",
    "litebird_sim/templates/*.md",
    "litebird_sim/templates/*.txt",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numba = "^0.61.2"
numpy = "^1.26.4"
astropy = "6.1.7"
tomlkit = "^0.12.1"

sphinx = "^8.1.3"
sphinxcontrib-bibtex = "^2.6.3"
sphinxcontrib-contentui = "^0.2.5"
"sphinxcontrib.asciinema" = "^0.3.7"

pytest = "^8.3.5"
jinja2 = "^3.1"
markdown = "^3.8"
markdown-katex = {version = "^202406.1035"}
matplotlib = "^3.10.3"
healpy = "^1.18.1"
pyyaml = "^6.0"
jplephem = "^2.22"
PyGithub = "^2.6.1"
requests = "^2.32.0"
rich = "^14.0.0"
ducc0 = "^0.38.0"
pysm3 = "^3.4.2"
asciimatics = "^1.15.0"
pyperclip = "^1.9.0"
pre-commit = "^4.2.0"
h5py = "^3.9"
deprecation = "^2.1.0"
scipy = "^1.14.0"
ruff = "^0.11.11"
libinsdb = "^0.8.0"
pydata-sphinx-theme = "^0.16.1"
poetry-plugin-export = "^1.9.0"

[tool.setuptools.package-data]
"litebird_sim.default_imo" = ["*"]
"litebird_sim.static" = ["*"]
"litebird_sim.templates" = ["*.md", "*.txt"]

[tool.ruff]
lint.extend-select = []

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]

[build-system]
requires = ["poetry_core>=2.1"]
build-backend = "poetry.core.masonry.api"
