[project]
name = "litebird_sim"
version = "0.16.0"
description = "Simulation tools for the LiteBIRD experiment"
authors = [
    {name = "Tomasi Maurizio", email = "maurizio.tomasi@unimi.it"},
    {name = "Pagano Luca", email = "luca.pagano@unife.it"},
    {name = "Anand Avinash"},
    {name = "Baccigalupi Carlo"},
    {name = "Banday Anthony"},
    {name = "Bortolami Marco"},
    {name = "Galloni Giacomo"},
    {name = "Galloway Mathew"},
    {name = "Ghigna Tommaso"},
    {name = "Giardiello Serena"},
    {name = "Gomes Miguel"},
    {name = "Hivon Eric"},
    {name = "Krachmalnicoff Nicoletta"},
    {name = "Micheli Silvia"},
    {name = "Monelli Marta"},
    {name = "Nagano Yuya"},
    {name = "Novelli Alessandro"},
    {name = "Patanchon Guillaume"},
    {name = "Poletti Davide"},
    {name = "Puglisi Giuseppe"},
    {name = "Raffuzzi, Nicolo Elia"},
    {name = "Reinecke Martin"},
    {name = "Takase Yusuke"},
    {name = "Weymann-Despres Gilles"},
]
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.10,<3.14"
dependencies = [
    "numba>=0.61.2",
    "numpy>=1.26.4",
    "astropy==6.1.7",
    "tomlkit>=0.12.1",
    "jinja2>=3.1",
    "matplotlib>=3.10.3",
    "healpy>=1.18.1",
    "pyyaml>=6.0",
    "jplephem>=2.22",
    "requests>=2.32.0",
    "rich>=14.0.0",
    "ducc0>=0.38.0",
    "pysm3>=3.4.2",
    "h5py>=3.9",
    "deprecation>=2.1.0",
    "deprecated>=1.2.18",
    "scipy>=1.14.0",
    "libinsdb>=0.9.0",
    "markdown>=3.9",
    "markdown-katex>=202406.1035",
    "asciimatics>=1.15.0",
    "PyGithub>=2.6.1",
    "pyperclip>=1.9.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=8.1.3",
    "sphinxcontrib-bibtex>=2.6.3",
    "sphinxcontrib-contentui>=0.2.5",
    "pydata-sphinx-theme>=0.16.1",
]
mpi = [
    "mpi4py>=3.1.0",
]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.11",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "ty>=0.0.9",
]

[tool.setuptools.package-data]
"litebird_sim.default_imo" = ["*"]
"litebird_sim.static" = ["*"]
"litebird_sim.templates" = ["*.md", "*.txt"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["litebird_sim", "test"]

[tool.ruff]
lint.extend-select = []

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]

[tool.coverage.run]
relative_files = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ty.src]
exclude = [
    "docs/",
    "benchmarks/",
    "test/",
    "scripts/",
    "litebird_sim/mbs/",
]

[tool.ty.rules]
possibly-missing-attribute = "ignore"  # 154
invalid-argument-type = "ignore"  # 77
not-iterable = "ignore"  # 16
unresolved-import = "ignore"  # 18
